[gd_scene load_steps=4 format=3 uid="uid://bb3msxg27ot55"]

[ext_resource type="Script" uid="uid://d27ntalh54ghc" path="res://scenes/ui/game_menu_screen.gd" id="1_3ffun"]
[ext_resource type="Theme" uid="uid://b1rurv4l8uktn" path="res://scenes/ui/game_ui_theme.tres" id="1_dkf86"]
[ext_resource type="PackedScene" uid="uid://b0ro4062ipmtb" path="res://scenes/ui/game_menu_screen_background.tscn" id="1_t26fm"]

[node name="GameMenuScreen" type="CanvasLayer"]
script = ExtResource("1_3ffun")

[node name="GameMenuScreenBackground" parent="." instance=ExtResource("1_t26fm")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dkf86")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.47451, 0.34902, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 54
text = "CROPTAILS"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "START"

[node name="SaveGameButton2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "SAVE"

[node name="ExitGameButton3" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "EXIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGameButton2" to="." method="_on_save_game_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitGameButton3" to="." method="_on_exit_game_button_3_pressed"]
